--- a/itaipuacuEsp8266/sensoriamentoCxCisterna/platformio.ini
+++ b/itaipuacuEsp8266/sensoriamentoCxCisterna/platformio.ini
@@ -8,12 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
 
 [env:esp12e]
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_deps = martinsos/HCSR04@^2.0.0
